--- a/public/homepages/css/style-academic.css
+++ b/public/homepages/css/style-academic.css
@@ -2,14 +2,18 @@
     padding: 24px;
 }
 
-.col-3 {
+.content-akademik .col-3 {
     border-right: 1px solid rgba(0, 0, 0, 0.08);
 }
 
-.col-9 {
+.content-akademik .col-9 {
     padding-left: 24px;
 }
 
-label {
-    color: rgba(0, 0, 0, 0.8);
+.video-teaser {
+    text-align: center;
+}
+
+.banner-marketing {
+    text-align: center;
 }
