--- a/public/homepages/css/style.css
+++ b/public/homepages/css/style.css
@@ -303,6 +303,10 @@
     content: "\f107";
 }
 
+.link-sistemAkademik {
+    padding: 25px;
+}
+
 @media only screen and (max-width: 991px) {
     .topbar-right {
         padding-left: 0;
@@ -4000,5 +4004,32 @@ button.back-to-top {
     .online-cours h2 {
         font-size: 24px;
         margin-bottom: 5px;
+    }
+}
+
+@media (min-width: 768px) {
+
+    .imglms,
+    .imgdigilib,
+    .imginfo {
+        transition: transform .2s;
+    }
+
+    .linklms:hover .imglms {
+        transform: scale(1.5);
+    }
+
+    .linkdigilib:hover .imgdigilib {
+        transform: scale(1.5);
+    }
+
+    .linkinfo:hover .imginfo {
+        transform: scale(1.5);
+    }
+}
+
+@media (max-width: 575.98px) {
+    .link-web {
+        margin-bottom: 24px;
     }
 }
