--- a/public/homepages/css/style.css
+++ b/public/homepages/css/style.css
@@ -2263,15 +2263,16 @@ button.back-to-top {
 
 .service-bx .info-bx {
     padding: 30px;
+    height: 180px;
 }
 
-.service-bx:hover {
+/* .service-bx:hover {
     transform: translateY(-15px);
     -moz-transform: translateY(-15px);
     -webkit-transform: translateY(-15px);
     -ms-transform: translateY(-15px);
     -o-transform: translateY(-15px);
-}
+} */
 
 /* Recent News */
 .recent-news {
