--- a/public/homepages/css/add-styles.css
+++ b/public/homepages/css/add-styles.css
@@ -1,39 +1,43 @@
 .right-line {
-	border-right: 5px #f7b205 solid;
-	height:2em
+    border-right: 5px #f7b205 solid;
+    height: 2em
 }
 
 .top-line {
-	border-top: 5px #f7b205 solid;
+    border-top: 5px #f7b205 solid;
 }
 
 .halved {
-	width: 50%;
-	float:left;
+    width: 50%;
+    float: left;
 }
 
 .bor-rad {
-	border-radius: 5px;
-	border: 2px solid #f7b205;
-	padding: 10px;
+    border-radius: 5px;
+    border: 2px solid #f7b205;
+    padding: 10px;
 }
 
 .h-auto {
-	height: auto;
+    height: auto;
 }
 
 .bg-box {
-	/* display: block; */
-	background: #ccc;
-	border: 4px solid #fff;
-	text-align: center;
-	overflow: hidden;
-	font-size: .7em;
-	text-decoration: none;
-	font-weight: bold;
-	color: #333;
-	box-shadow: 4px 4px 9px -4px rgba(0,0,0,0.4);
-	-webkit-transition: all linear .1s;
-	-moz-transition: all linear .1s;
-	transition: all linear .1s;
+    /* display: block; */
+    background: #ccc;
+    border: 4px solid #fff;
+    text-align: center;
+    overflow: hidden;
+    font-size: .7em;
+    text-decoration: none;
+    font-weight: bold;
+    color: #333;
+    box-shadow: 4px 4px 9px -4px rgba(0, 0, 0, 0.4);
+    -webkit-transition: all linear .1s;
+    -moz-transition: all linear .1s;
+    transition: all linear .1s;
+}
+
+.box-icon {
+    height: 170px;
 }
