--- a/public/homepages/css/add-styles.css
+++ b/public/homepages/css/add-styles.css
@@ -41,3 +41,10 @@
 .box-icon {
     height: 170px;
 }
+
+#pdfjsdua,
+#pdfjssatu {
+    width: 100%;
+    height: 500px;
+    border: 1px solid rgba(0, 0, 0, .2);
+}
