--- a/public/homepages/css/add-styles.css
+++ b/public/homepages/css/add-styles.css
@@ -44,7 +44,8 @@
 
 #pdfjsdua,
 #pdfjssatu {
+    margin-bottom: 32px;
     width: 100%;
-    height: 500px;
+    height: 700px;
     border: 1px solid rgba(0, 0, 0, .2);
 }
